--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,39 +14,49 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JourneyMate"
         tools:targetApi="31">
+        <activity
+            android:name=".Activities.Planning"
+            android:exported="false" />
 
+        <activity
+            android:name=".Activities.Review"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Budgets"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Traveldate"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Travelling"
+            android:exported="false" />
         <activity
             android:name=".Activities.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activities.SignUp"
             android:exported="false" />
-
-
         <activity
             android:name=".Fragments.AboutUsFragment"
             android:exported="false" />
-
         <activity
             android:name=".Activities.Login"
             android:exported="false" />
-
         <activity
             android:name=".Activities.MainActivity"
             android:exported="false" />
-
-
         <activity
             android:name="com.razorpay.CheckoutActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -56,7 +65,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB2Q7-FAsexaKZcAFLUQUplBuLNZ2LMgKA" />
 
-
         <receiver
             android:name="com.razorpay.RzpTokenReceiver"
             android:exported="false">
@@ -64,6 +72,6 @@
                 <action android:name="android.intent.action.SOME_ACTION" />
             </intent-filter>
         </receiver>
-
     </application>
+
 </manifest>
